@startuml Class Diagram - Manage Micro-Experience (Use Case 12)
!theme plain

skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 40
skinparam ranksep 30

top to bottom direction

package "Presentation" {
  class MicroExperienceController <<controller>> {
    - _microExperienceService : IMicroExperienceService
    --
    + GetList(filter : MicroExperienceFilter) : List<MicroExperienceListItemResponse>
    + GetById(id : Guid) : MicroExperienceDetailResponse
    + Create(request : CreateMicroExperienceRequest) : MicroExperienceDetailResponse
    + Update(id : Guid, request : UpdateMicroExperienceRequest) : MicroExperienceDetailResponse
    + Delete(id : Guid) : IActionResult
  }
}

package "Application" {
  interface IMicroExperienceService <<service>> {
    + GetListAsync(filter : MicroExperienceFilter, ct?) : Task<List<MicroExperienceListItemResponse>>
    + GetByIdAsync(id : Guid, ct?) : Task<MicroExperienceDetailResponse?>
    + CreateAsync(request : CreateMicroExperienceRequest, ct?) : Task<MicroExperienceDetailResponse?>
    + UpdateAsync(id : Guid, request : UpdateMicroExperienceRequest, ct?) : Task<MicroExperienceDetailResponse?>
    + DeleteAsync(id : Guid, ct?) : Task<bool>
  }

  class MicroExperienceService <<service>> {
    - _repository : IMicroExperienceRepository
    - _categoryRepository : ICategoryRepository
    - _goongMapsService : IGoongMapsService
    --
    + GetListAsync(...) : Task<List<MicroExperienceListItemResponse>>
    + GetByIdAsync(...) : Task<MicroExperienceDetailResponse?>
    + CreateAsync(...) : Task<MicroExperienceDetailResponse?>
    + UpdateAsync(...) : Task<MicroExperienceDetailResponse?>
    + DeleteAsync(...) : Task<bool>
  }

  interface IMicroExperienceRepository <<repository>> {
    + FindAllAsync(filter : MicroExperienceFilter, ct?) : Task<List<MicroExperience>>
    + GetByIdAsync(id : Guid, ct?) : Task<MicroExperience?>
    + ExistsBySlugAsync(slug : string, ct?) : Task<bool>
    + SaveAsync(entity : MicroExperience, ct?) : Task<MicroExperience>
    + DeleteAsync(id : Guid, ct?) : Task
    + FindSuggestionsAlongRouteAsync(journeyId : Guid, limit : int, weather?, timeOfDay?, ct?) : Task<List<RouteMicroExperienceSuggestionResponse>>
  }

  interface ICategoryRepository <<repository>> {
    + ExistsAsync(categoryId : Guid, ct?) : Task<bool>
  }

  interface IGoongMapsService <<service>> {
    + GeocodeAddressToPointAsync(address : string, ct?) : Task<Point?>
  }
}

package "Infrastructure" {
  class MicroExperienceRepository <<repository>> {
    - _context : AppDbContext
    --
    + FindAllAsync(...) : Task<List<MicroExperience>>
    + GetByIdAsync(id : Guid, ct?) : Task<MicroExperience?>
    + ExistsBySlugAsync(slug : string, ct?) : Task<bool>
    + SaveAsync(entity : MicroExperience, ct?) : Task<MicroExperience>
    + DeleteAsync(id : Guid, ct?) : Task
    + FindSuggestionsAlongRouteAsync(...) : Task<List<RouteMicroExperienceSuggestionResponse>>
  }
}

package "DTOs" {
  class MicroExperienceFilter <<DTO>> {
    + Keyword : string?
    + CategoryId : Guid?
    + Status : ExperienceStatus?
    + Mood : MoodType?
    + TimeOfDay : TimeOfDay?
  }

  class MicroExperienceListItemResponse <<DTO>> {
    + Id : Guid
    + Name : string?
    + City : string?
    + Status : ExperienceStatus?
    + SuitableMoods : List<string>?
    + PreferredTimes : List<string>?
    + Latitude : double?
    + Longitude : double?
  }

  class CreateMicroExperienceRequest <<DTO>> {
    + Name : string
    + CategoryId : Guid
    + Address : string?
    + City : string?
    + Country : string?
    + SuitableMoods : List<string>?
    + PreferredTimes : List<string>?
  }

  class UpdateMicroExperienceRequest <<DTO>> {
    + Name : string
    + CategoryId : Guid
    + Address : string?
    + Status : ExperienceStatus
    + SuitableMoods : List<string>?
    + PreferredTimes : List<string>?
  }

  class MicroExperienceDetailResponse <<DTO>> {
    + Id : Guid
    + Name : string?
    + CategoryName : string?
    + Description : string?
    + AvgRating : decimal
    + Status : ExperienceStatus?
    + Address : string?
    + City : string?
    + Country : string?
    + SuitableMoods : List<string>?
    + PreferredTimes : List<string>?
    + WeatherSuitability : List<string>?
    + Latitude : double?
    + Longitude : double?
  }
}

package "Domain" {
  class MicroExperience <<entity>> {
    + Id : Guid
    + Name : string
    + Slug : string
    + Status : ExperienceStatus
  }

  class Category <<entity>> {
    + Id : Guid
    + Name : string
    + Slug : string
  }

  class ExperienceDetail <<entity>> {
    + ExperienceId : Guid
    + Description : string
    + PriceRange : string
  }

  class ExperienceMetric <<entity>> {
    + ExperienceId : Guid
    + AvgRating : decimal
    + TotalVisits : int
  }

  class User <<entity>> {
    + Id : Guid
    + Email : string
    + Role : UserRole
  }
}

' Relationships
MicroExperienceController --> IMicroExperienceService
MicroExperienceController ..> MicroExperienceFilter
MicroExperienceController ..> MicroExperienceListItemResponse
MicroExperienceController ..> CreateMicroExperienceRequest
MicroExperienceController ..> UpdateMicroExperienceRequest
MicroExperienceController ..> MicroExperienceDetailResponse

MicroExperienceService ..|> IMicroExperienceService
MicroExperienceService --> IMicroExperienceRepository
MicroExperienceService --> ICategoryRepository
MicroExperienceService --> IGoongMapsService
MicroExperienceService ..> MicroExperienceFilter
MicroExperienceService ..> MicroExperienceListItemResponse
MicroExperienceService ..> CreateMicroExperienceRequest
MicroExperienceService ..> UpdateMicroExperienceRequest
MicroExperienceService ..> MicroExperienceDetailResponse

MicroExperienceRepository ..|> IMicroExperienceRepository
MicroExperienceRepository --> MicroExperience

MicroExperience "1" --> "1" Category
MicroExperience "1" --> "0..1" ExperienceDetail
MicroExperience "1" --> "0..1" ExperienceMetric
MicroExperience "*" --> "1" User : uploadedBy

@enduml